<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Artcodes recognises a different marker scheme that allows the
  ~ creation of aesthetically pleasing, even beautiful, codes.
  ~ Copyright (C) 2013-2015  The University of Nottingham
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published
  ~ by the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along using this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activities.ExperienceEditActivity">

	<data>

		<import type="android.view.View" />

		<variable name="availability"
		          type="uk.ac.horizon.artcodes.model.Availability" />
	</data>

	<LinearLayout android:orientation="horizontal"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:layout_margin="8dp">

		<LinearLayout android:orientation="vertical"
		              android:layout_width="0dp"
		              android:layout_height="wrap_content"
		              android:layout_weight="1">

			<LinearLayout android:layout_width="fill_parent"
			              android:layout_height="wrap_content"
			              android:orientation="horizontal">

				<ImageView
						tools:ignore="ContentDescription"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:layout_gravity="center_vertical"
						android:scaleType="fitCenter"
						android:src="@drawable/ic_event_black_24dp"
						android:tint="@color/ic_tint" />

				<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:gravity="center"
						android:padding="8dp"
						android:textAppearance="@style/TextAppearance.AppCompat"
						android:background="?attr/selectableItemBackground"

						android:layout_weight="1"
						android:hint="@string/start_date"
						app:date="@{availability.start}"
						android:id="@+id/availabilityStart" />

			</LinearLayout>

			<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

				<TextView android:layout_width="0dp"
				          android:layout_height="wrap_content"
				          android:layout_gravity="center_vertical"
				          android:layout_marginLeft="56dp"
				          android:layout_marginStart="56dp"
				          android:gravity="center"
				          android:padding="8dp"
				          android:textAppearance="@style/TextAppearance.AppCompat"
				          android:background="?attr/selectableItemBackground"
				          android:layout_weight="1"
				          android:hint="@string/end_date"
				          app:date="@{availability.end}"
				          android:id="@+id/availabilityEnd" />

			</LinearLayout>

			<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

				<ImageView
						tools:ignore="ContentDescription"

						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:layout_gravity="center_vertical"
						android:scaleType="fitCenter"
						android:src="@drawable/ic_place_black_24dp"
						android:tint="@color/ic_tint" />

				<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:background="?attr/selectableItemBackground"
						android:layout_weight="1"
						android:gravity="center"
						android:padding="8dp"
						android:textAppearance="@style/TextAppearance.AppCompat"
						android:text="@{availability.name}"
						android:hint="@string/location"
						android:id="@+id/availabilityLocation" />

			</LinearLayout>
		</LinearLayout>

		<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:layout_gravity="center_vertical"
				android:src="@drawable/ic_close_black_18dp"
				android:tint="@color/ic_tint"
				tools:ignore="ContentDescription"
				android:background="?attr/selectableItemBackground"
				android:id="@+id/availabilityDelete" />
	</LinearLayout>
</layout>